--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,6 +14,9 @@
 <div class="container">
     <form action="/register" class="form-signin" method="post">
         <h2 class="form-signin-heading">Please sign up</h2>
+        <div class="alert alert-danger" role="alert" th:if="${param.error}">
+            Username already taken.
+        </div>
         <p>
             <label class="sr-only" for="username">Username</label>
             <input autofocus class="form-control" id="username" name="username" placeholder="Username" required
