add error page and center content in that and home

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TurboBuy</title>
+    <title>Error</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-<p>This page is whitelisted!</p>
-<a href="/login">login</a>
-<a href="/logout">logout</a>
+<h1>Error 404</h1>
+<p>We could not find the page you were looking for.</p>
+<a href="/">Home</a>
 </body>
 <style>
     body {
