--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Error</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="We could not find the page you were looking for." name="description">
+    <meta content="xdavide9" name="author">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
+    <title>Error 404</title>
 </head>
 <body>
-<h1>Error 404</h1>
-<p>We could not find the page you were looking for.</p>
-<a href="/">Home</a>
+<div class="container">
+    <h1>Error 404</h1>
+    <p>We could not find the page you were looking for.</p>
+    <a href="/">Home</a>
+</div>
+<script crossorigin="anonymous"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
-<style>
-    body {
-        text-align: center;
-    }
-</style>
 </html>
