--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>TurboBuy</title>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="Sell and Buy whatever you want in just a few clicks! Home of turbobuy.store" name="description">
+    <meta content="xdavide9" name="author">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
+    <title>Buy and Sell Fast!</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-<p>This page is whitelisted!</p>
-<a href="/login">login</a>
-<a href="/logout">logout</a>
+<div class="container">
+    <h1>Hello World!</h1>
+    <p>This page is whitelisted!</p>
+    <div sec:authorize="!isAuthenticated()">
+        <a href="/login">login</a>
+    </div>
+    <div sec:authorize="isAuthenticated()">
+        <a href="/logout">logout</a>
+    </div>
+</div>
+<script crossorigin="anonymous"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
-<style>
-    body {
-        text-align: center;
-    }
-</style>
 </html>
