create thymeleaf header fragment and add margin to login and register

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -21,12 +22,12 @@
             You have been signed out.
         </div>
         <p>
-            <label class="sr-only" for="username">Username</label>
+            <label class="sr-only mb-1" for="username">Username</label>
             <input autofocus class="form-control" id="username" name="username" placeholder="Username" required
                    type="text">
         </p>
         <p>
-            <label class="sr-only" for="password">Password</label>
+            <label class="sr-only mb-1" for="password">Password</label>
             <input class="form-control" id="password" name="password" placeholder="Password" required type="password">
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
