--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en"
+      xmlns:sec="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -10,6 +12,7 @@
     <title>Buy and Sell Fast!</title>
 </head>
 <body>
+<div th:insert="fragments/header.html :: header"></div>
 <div class="container">
     <h1>Hello World!</h1>
     <p>This page is whitelisted!</p>
