create sales.html and form to submit sales to api

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,6 +21,7 @@
     </div>
     <div sec:authorize="isAuthenticated()">
         <a href="/logout">logout</a>
+        <a href="/sales">sales</a>
     </div>
 </div>
 <script crossorigin="anonymous"
