--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
         </p>
         <p class="position-relative">
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-            <a class="link-primary position-absolute end-0 bottom-0" th:href="register">Not Registered?</a>
+            <a class="link-primary position-absolute end-0 bottom-0" href="/register">Not Registered?</a>
         </p>
     </form>
 </div>
