--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,7 +29,7 @@
         </p>
         <p class="position-relative">
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-            <a class="link-primary position-absolute end-0 bottom-0" th:href="login">Already Registered?</a>
+            <a class="link-primary position-absolute end-0 bottom-0" href="/login">Already Registered?</a>
         </p>
     </form>
 </div>
