started improving navbar; add assets folder; fix bug in sales.html where navbar wasn't attached to the top of the screen

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -13,7 +13,7 @@
 <div class="container">
     <h1>Error 404</h1>
     <p>We could not find the page you were looking for.</p>
-    <a href="/">Home</a>
+    <a class="link-primary" href="/">Home</a>
 </div>
 <script crossorigin="anonymous"
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
