--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
+      xmlns:sec="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +11,50 @@
 </head>
 <body>
 <div th:fragment="header">
-    <h1>HEADER</h1>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img alt="T" src="/images/t.png" width="40">
+                Turbobuy
+            </a>
+            <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler" data-bs-target="#navbarSupportedContent"
+                    data-bs-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a aria-current="page" class="nav-link active" href="/">Home</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="#">Account</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" href="/sales">Sales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+                <a class="mx-2" href="/register" sec:authorize="!isAuthenticated()">
+                    <button class="btn-outline-dark btn">Register</button>
+                </a>
+                <a href="/login" sec:authorize="!isAuthenticated()">
+                    <button class="btn-outline-dark btn">Login</button>
+                </a>
+                <a class="mx-2" href="#" sec:authorize="isAuthenticated()">
+                    <img alt="Account" src="/images/account.png" width="40">
+                </a>
+                <a href="/logout" sec:authorize="isAuthenticated()">
+                    <button class="btn-outline-dark btn">Logout</button>
+                </a>
+            </div>
+        </div>
+    </nav>
 </div>
 </body>
 </html>
