--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -11,7 +11,7 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="p-0">
 <div th:insert="fragments/header.html :: header"></div>
 <div class="container">
     <form action="/sales" class="form-signin" method="post">
