--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,16 +28,16 @@
                         <a aria-current="page" class="nav-link active" href="/">Home</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link" href="#">Account</a>
+                        <a class="nav-link" href="/account">Account</a>
                     </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link" href="/sales">Sales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="/contact">Contact</a>
                     </li>
                 </ul>
                 <a class="mx-2" href="/register" sec:authorize="!isAuthenticated()">
@@ -46,7 +46,7 @@
                 <a href="/login" sec:authorize="!isAuthenticated()">
                     <button class="btn-outline-dark btn">Login</button>
                 </a>
-                <a class="mx-2" href="#" sec:authorize="isAuthenticated()">
+                <a class="mx-2" href="/account" sec:authorize="isAuthenticated()">
                     <img alt="Account" src="/images/account.png" width="40">
                 </a>
                 <a href="/logout" sec:authorize="isAuthenticated()">
