--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,12 +8,30 @@
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
+    <style>
+        body {
+            width: 100vw;
+            height: 100vh;
+            background: url(/images/cover.jpg) no-repeat center center fixed;
+            background-size: cover;
+            backdrop-filter: blur(5px);
+        }
+
+        .content {
+            scale: 1.2;
+            margin-top: 250px;
+        }
+    </style>
     <title>Buy and Sell Fast!</title>
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
-<div class="container">
-    <h1>Hello World</h1>
+<div class="content text-center">
+    <div class="h1 text-white">Turbobuy</div>
+    <div class="text-white">Start Browsing Now</div>
+    <a href="/sales">
+        <button class="btn btn-outline-light mt-3">Sales</button>
+    </a>
 </div>
 <script crossorigin="anonymous"
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
