--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <meta content="Sell and Buy whatever you want in just a few clicks! Home of turbobuy.store" name="description">
+    <meta content="Sell and Buy whatever you want in just a few clicks. Home of turbobuy.store" name="description">
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
@@ -22,7 +22,7 @@
             margin-top: 250px;
         }
     </style>
-    <title>Buy and Sell Fast!</title>
+    <title>Sell and Buy in just a few clicks!</title>
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
