--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <meta content="Sales you can buy or post" name="description">
+    <meta content="View or post exciting sales" name="description">
     <meta content="xdavide9" name="author">
-    <title>Buy and Sell Fast!</title>
+    <title>Sell and buy in just a few clicks</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
