--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,6 +10,12 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
+    <style>
+        .form-control:focus {
+            border-color: var(--bs-dark);
+            box-shadow: 0 0 0 0.2rem rgba(33, 37, 41, 0.25);
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -28,8 +34,8 @@
             <input class="form-control" id="password" name="password" placeholder="Password" required type="password">
         </p>
         <p class="position-relative">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-            <a class="link-primary position-absolute end-0 bottom-0" href="/login">Already Registered?</a>
+            <button class="btn btn-lg btn-dark btn-block" type="submit">Sign up</button>
+            <a class="link-dark position-absolute end-0 bottom-0" href="/login">Already Registered?</a>
         </p>
     </form>
 </div>
