--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,62 +8,7 @@
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
-    <style>
-        #home .cover {
-            z-index: -1;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background-image: url(/images/portrait-cover.jpg);
-            background-size: cover;
-            backdrop-filter: blur(5px);
-        }
-
-        #home .content {
-            margin-top: 125px;
-            scale: 1.2;
-        }
-
-        /*sm*/
-        @media (min-width: 576px) {
-
-        }
-
-        /*md*/
-        @media (min-width: 768px) {
-            #home .cover {
-                background-image: url(/images/landscape-cover.jpg);
-            }
-
-            #home .content {
-                position: relative;
-                right: 50px;
-            }
-        }
-
-        /*lg*/
-        @media (min-width: 992px) {
-            #home .content {
-                right: 100px;
-            }
-        }
-
-        /*xl*/
-        @media (min-width: 1200px) {
-            #home .content {
-                right: 150px;
-            }
-        }
-
-        /*xxl*/
-        @media (min-width: 1400px) {
-            #home .content {
-                right: 200px;
-            }
-        }
-    </style>
+    <link href="/css/home.css" rel="stylesheet">
     <title>Sell and Buy in just a few clicks!</title>
 </head>
 <body id="home">
