--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,12 +10,7 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
-    <style>
-        .form-control:focus {
-            border-color: var(--bs-dark);
-            box-shadow: 0 0 0 0.2rem rgba(33, 37, 41, 0.25);
-        }
-    </style>
+    <link href="/css/login.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
