--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -6,10 +6,11 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="View or post exciting sales" name="description">
     <meta content="xdavide9" name="author">
-    <title>Sell and buy in just a few clicks</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
+    <link href="/css/header.css" rel="stylesheet">
+    <title>Sell and buy in just a few clicks</title>
 </head>
 <body class="p-0">
 <div th:insert="fragments/header.html :: header"></div>
@@ -25,7 +26,7 @@
             <input class="form-control" id="description" name="description" placeholder="Description" required
                    type="text">
         </p>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+        <button class="btn btn-lg btn-block" type="submit">Submit</button>
     </form>
 </div>
 <script crossorigin="anonymous"
