--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,18 +9,33 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/account.css" rel="stylesheet">
     <title>Your Account Details</title>
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
-<div class="container">
-    <h1>Info</h1>
-    Username: <span th:text="${currentUser.getUsername()}"></span></br>
-    Password: <span th:text="${currentUser.getPassword()}"></span>
-    <h1>Sales</h1>
-    <div th:each="sale : ${currentUser.getSales()}">
-        Title: <span th:text="${sale.title}">title</span></br>
-        Description: <span th:text="${sale.description}">description</span>
+<div class="container d-flex justify-content-center">
+    <div class="card my-5" id="card">
+        <div class="card-header">
+            My Account
+        </div>
+        <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">
+                Username
+                <a href="#">
+                    <img src="/images/pencil-fill.svg">
+                </a>
+            </h6>
+            <p class="card-text" th:text="${currentUser.getUsername()}"></p>
+            <h6 class="card-subtitle mb-2 text-muted">
+                Password
+                <a href="#">
+                    <img src="/images/pencil-fill.svg">
+                </a>
+            </h6>
+            <p class="card-text">********</p>
+            <a class="btn btn-dark" href="#">My Sales</a>
+        </div>
     </div>
 </div>
 <script crossorigin="anonymous"
