--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -10,31 +10,84 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/account.css" rel="stylesheet">
-    <title>Your Account Details</title>
+    <link href="/css/login.css" rel="stylesheet">
+    <title>My Account</title>
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
-<div class="container d-flex justify-content-center">
-    <div class="card my-5" id="card">
+<div class="mt-5 container d-flex justify-content-center align-items-center flex-column flex-lg-row gap-5 align-self-start">
+    <div class="card">
         <div class="card-header">
             My Account
         </div>
         <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">
                 Username
-                <a href="#">
-                    <img src="/images/pencil-fill.svg">
+                <a href="javascript:void(0)">
+                    <img alt="edit" src="/images/pencil-fill.svg">
                 </a>
             </h6>
             <p class="card-text" th:text="${currentUser.getUsername()}"></p>
             <h6 class="card-subtitle mb-2 text-muted">
                 Password
-                <a href="#">
-                    <img src="/images/pencil-fill.svg">
+                <a href="javascript:void(0)">
+                    <img alt="edit" src="/images/pencil-fill.svg">
                 </a>
             </h6>
             <p class="card-text">********</p>
             <a class="btn btn-dark" href="#">My Sales</a>
+        </div>
+    </div>
+    <div class="card" id="change-username">
+        <div class="card-header position-relative">
+            Change Username
+            <a href="javascript:void(0)">
+                <img alt="x" class="position-absolute end-0 top-0" src="/images/x.svg">
+            </a>
+        </div>
+        <div class="card-body">
+            <form action="#">
+                <div class="alert alert-danger" role="alert" th:if="${param.username}">
+                    Incorrect Password
+                </div>
+                <p>
+                    <label class="sr-only mb-1" for="current-username">Current Username</label>
+                    <input autofocus class="form-control" id="current-username" name="current-username"
+                           placeholder="Current Username" required type="text">
+                </p>
+                <p>
+                    <label class="sr-only mb-1" for="new-username">New Username</label>
+                    <input autofocus class="form-control" id="new-username" name="new-username"
+                           placeholder="New Username" required type="text">
+                </p>
+                <button class="btn btn-dark btn-block" type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+    <div class="card" id="change-password">
+        <div class="card-header position-relative">
+            Change Password
+            <a href="javascript:void(0)">
+                <img alt="x" class="position-absolute end-0 top-0" src="/images/x.svg">
+            </a>
+        </div>
+        <div class="card-body">
+            <form action="#">
+                <div class="alert alert-danger" role="alert" th:if="${param.password}">
+                    Incorrect Password
+                </div>
+                <p>
+                    <label class="sr-only mb-1" for="current-password">Current Password</label>
+                    <input autofocus class="form-control" id="current-password" name="current-password"
+                           placeholder="Current Password" required type="text">
+                </p>
+                <p>
+                    <label class="sr-only mb-1" for="new-password">New Password</label>
+                    <input autofocus class="form-control" id="new-password" name="new-password"
+                           placeholder="New Password" required type="text">
+                </p>
+                <button class="btn btn-dark btn-block" type="submit">Submit</button>
+            </form>
         </div>
     </div>
 </div>
