--- a/src/main/resources/public/css/account.css
+++ b/src/main/resources/public/css/account.css
@@ -1,3 +1,11 @@
 .mt-5.container.d-flex .card {
     width: 300px;
 }
+
+#username-card {
+    display: none;
+}
+
+#password-card {
+    display: none;
+}
