--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,14 +12,12 @@
     <link href="/css/header.css" rel="stylesheet">
     <title>Sell and Buy in just a few clicks!</title>
 </head>
-<body id="home">
+<body>
 <div th:insert="fragments/header.html :: header"></div>
 <div class="cover"></div>
-<div class="content text-center">
-    <div class="h1 text-white">Turbobuy</div>
-    <div class="text-white">Start Browsing Now</div>
+<div class="mx-3 mt-3">
     <a href="/sales">
-        <button class="btn btn-outline-light mt-3">Sales</button>
+        <button class="btn btn-outline-dark">Start Browsing Now</button>
     </a>
 </div>
 <script crossorigin="anonymous"
