--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -44,10 +44,13 @@
                         <a class="nav-link" href="/contact">Contact</a>
                     </li>
                     <li class="nav-item mobile">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/login" sec:authorize="!isAuthenticated()">Login</a>
                     </li>
                     <li class="nav-item mobile">
-                        <a class="nav-link" href="/register">Register</a>
+                        <a class="nav-link" href="/register" sec:authorize="!isAuthenticated()">Register</a>
+                    </li>
+                    <li class="nav-item mobile">
+                        <a class="nav-link" href="/logout" sec:authorize="isAuthenticated()">Logout</a>
                     </li>
                 </ul>
                 <a class="mx-2 desktop" href="/register" sec:authorize="!isAuthenticated()">
