--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -10,24 +10,36 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
     <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/login.css" rel="stylesheet">
+    <link href="/css/sales.css" rel=stylesheet>
     <title>Sell and buy in just a few clicks!</title>
 </head>
 <body class="p-0">
 <div th:insert="fragments/header.html :: header"></div>
-<div class="container">
-    <form action="/sales" class="form-signin" method="post">
-        <h2 class="form-signin-heading">Add a new Sale</h2>
-        <p>
-            <label class="sr-only mb-1" for="title">Title</label>
-            <input autofocus class="form-control" id="title" name="title" placeholder="Title" required type="text">
-        </p>
-        <p>
-            <label class="sr-only mb-1" for="description">Description</label>
-            <input class="form-control" id="description" name="description" placeholder="Description" required
-                   type="text">
-        </p>
-        <button class="btn btn-lg btn-block" type="submit">Submit</button>
-    </form>
+<div class="mt-5 container d-flex justify-content-center align-items-center flex-column flex-lg-row gap-5 align-self-start">
+    <div class="card" id="sales-card">
+        <div class="card-header position-relative">
+            New Sale
+        </div>
+        <div class="card-body">
+            <form action="/sales" method="post">
+                <div class="alert alert-danger" role="alert" th:if="${param.error}">
+                    Title Already Exists
+                </div>
+                <p>
+                    <label class="sr-only mb-1" for="title">Title</label>
+                    <input autofocus class="form-control" id="title" name="title"
+                           placeholder="Title" required type="text">
+                </p>
+                <p>
+                    <label class="sr-only mb-1" for="description">Description</label>
+                    <input autofocus class="form-control" id="description" name="description"
+                           placeholder="Description" required type="text">
+                </p>
+                <button class="btn btn-dark btn-block" type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
 </div>
 <script crossorigin="anonymous"
         integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
