--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,10 +31,10 @@
                     <li class="nav-item">
                         <a aria-current="page" class="nav-link active" href="/">Home</a>
                     </li>
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <li class="nav-item">
                         <a class="nav-link" href="/account">Account</a>
                     </li>
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <li class="nav-item">
                         <a class="nav-link" href="/sales">Sales</a>
                     </li>
                     <li class="nav-item">
