--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -9,14 +9,23 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/account.css" rel="stylesheet">
-    <link href="/css/login.css" rel="stylesheet">
+    <link href="/css/card.css" rel="stylesheet">
+    <link href="/css/form.css" rel="stylesheet">
     <title>My Account</title>
+    <style>
+        #username-card {
+            display: none;
+        }
+
+        #password-card {
+            display: none;
+        }
+    </style>
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
 <div class="mt-5 container d-flex justify-content-center align-items-center flex-column flex-lg-row gap-5 align-self-start">
-    <div class="card account-card">
+    <div class="card my-card">
         <div class="card-header">
             My Account
         </div>
@@ -40,7 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="card account-card" id="username-card">
+    <div class="card my-card" id="username-card">
         <div class="card-header position-relative">
             Change Username
             <a href="javascript:void(0)" id="close-username-card">
@@ -75,7 +84,7 @@
             </form>
         </div>
     </div>
-    <div class="card account-card" id="password-card">
+    <div class="card my-card" id="password-card">
         <div class="card-header position-relative">
             Change Password
             <a href="javascript:void(0)" id="close-password-card">
