--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -10,14 +10,14 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link crossorigin="anonymous" href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"/>
     <link href="/css/header.css" rel="stylesheet">
-    <link href="/css/login.css" rel="stylesheet">
-    <link href="/css/sales.css" rel=stylesheet>
+    <link href="/css/form.css" rel="stylesheet">
+    <link href="/css/card.css" rel=stylesheet>
     <title>Sell and buy in just a few clicks!</title>
 </head>
 <body class="p-0">
 <div th:insert="fragments/header.html :: header"></div>
 <div class="mt-5 container d-flex justify-content-center align-items-center flex-column flex-lg-row gap-5 align-self-start flex-wrap">
-    <div class="card sale-card">
+    <div class="card my-card">
         <div class="card-header position-relative">
             New Sale
         </div>
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div th:each="sale: ${sales}">
-        <div class="card sale-card" id="sale-iterable-card">
+        <div class="card my-card" id="sale-iterable-card">
             <div class="card-header">On Sale</div>
             <div class="card-body">
                 <div class="text-muted mb-3">
