--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
             <input class="form-control" id="password" name="password" placeholder="Password" required type="password">
         </p>
         <p class="position-relative">
-            <button class="btn btn-lg btn-dark btn-block" type="submit">Sign in</button>
+            <button class="btn btn-lg btn-dark" type="submit">Sign in</button>
             <a class="link-dark position-absolute end-0 bottom-0" href="/register">Not Registered?</a>
         </p>
     </form>
