--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,7 +29,7 @@
             <input class="form-control" id="password" name="password" placeholder="Password" required type="password">
         </p>
         <p class="position-relative">
-            <button class="btn btn-lg btn-dark btn-block" type="submit">Sign up</button>
+            <button class="btn btn-lg btn-dark" type="submit">Sign up</button>
             <a class="link-dark position-absolute end-0 bottom-0" href="/login">Already Registered?</a>
         </p>
     </form>
