add global.css to add css properties to all templates at the same time

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -11,6 +11,7 @@
     <link href="/css/header.css" rel="stylesheet">
     <link href="/css/card.css" rel="stylesheet">
     <link href="/css/form.css" rel="stylesheet">
+    <link href="/css/global.css" rel="stylesheet">
     <title>My Account</title>
     <style>
         #username-card {
