--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,6 +7,7 @@
     <meta content="xdavide9" name="author">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
+    <link href="/css/global.css" rel="stylesheet">
     <title>Error 404</title>
 </head>
 <body>
