--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,7 @@
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
     <link href="/css/home.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
+    <link href="/css/global.css" rel="stylesheet">
     <title>Sell and Buy in just a few clicks!</title>
 </head>
 <body>
