add image input to sales form

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -105,7 +105,7 @@
                 </p>
                 <p>
                     <label class="sr-only mb-1" for="new-password">New Password</label>
-                    <input autofocus class="form-control" id="new-password" name="newPassword"
+                    <input class="form-control" id="new-password" name="newPassword"
                            placeholder="New Password" required type="password">
                 </p>
                 <button class="btn btn-dark" type="submit">Submit</button>
