create home page with jumbotron

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,15 @@
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
+<div class="jumbotron jumbotron-fluid my-5">
+    <div class="container">
+        <h1 class="display-4">Turbobuy</h1>
+        <p class="lead">Amateur e-commerce where you can buy and sell with just a few clicks!</p>
+        <hr class="my-4">
+        <p>Made by xDavide9</p>
+        <a class="btn btn-dark btn-lg" href="/sales" role="button">Start Browsing now</a>
+    </div>
+</div>
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
