--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
         <p class="lead">Amateur e-commerce where you can buy and sell with just a few clicks!</p>
         <hr class="my-4">
         <p>Made by xDavide9</p>
-        <a class="btn btn-dark btn-lg" href="/sales" role="button">Start Browsing now</a>
+        <a class="btn btn-dark btn-lg" href="/sales" role="button">Start Browsing Now</a>
     </div>
 </div>
 <script crossorigin="anonymous"
