--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -16,6 +16,7 @@
 <div class="container">
     <h1>Hello Contact</h1>
 </div>
+<div th:insert="fragments/footer.html :: footer"></div>
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
