--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,11 +11,12 @@
     <title>Error 404</title>
 </head>
 <body>
-<div class="container">
+<div class="container mt-5">
     <h1>Error 404</h1>
     <p>We could not find the page you were looking for.</p>
     <a class="link-dark" href="/">Home</a>
 </div>
+<div th:insert="fragments/footer.html :: footer"></div>
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
