--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,15 +13,18 @@
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
-<div class="jumbotron jumbotron-fluid my-5">
-    <div class="container">
-        <h1 class="display-4">Turbobuy</h1>
-        <p class="lead">Amateur e-commerce where you can buy and sell with just a few clicks!</p>
-        <hr class="my-4">
-        <p>Made by xDavide9</p>
-        <a class="btn btn-dark btn-lg" href="/sales" role="button">Start Browsing Now</a>
+<div class="top-level-container">
+    <div class="jumbotron jumbotron-fluid my-5">
+        <div class="container">
+            <h1 class="display-4">Turbobuy</h1>
+            <p class="lead">Amateur e-commerce where you can buy and sell with just a few clicks!</p>
+            <hr class="my-4">
+            <p>Made by xDavide9</p>
+            <a class="btn btn-dark btn-lg" href="/sales" role="button">Start Browsing Now</a>
+        </div>
     </div>
 </div>
+<div th:insert="fragments/footer.html :: footer"></div>
 <script crossorigin="anonymous"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
